# pipernet

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LAUNCH.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  THREATS.md  dot.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
cli/: README.md  __init__.py  __main__.py  core.py  server.py
compression/: Makefile
compression/benchmarks/: run.sh
compression/src/: __init__.py  baseline.py
compression/track-b/: STATUS.md  bench.py  match_model.py  mixer.py  mixer_multi.py
mcp-server/: README.md  __init__.py  main.py  pyproject.toml  test_mcp_client.py
mesh/: OPERATOR-PROTOCOL.md  README.md  SIGNER.md  janus-sequence-2-signer.py  r90-r91-mirror.md  room_dispatch.jsonl  room_poll.py
personas/: dinesh.md  erlich.md  gilfoyle.md
spec/: 00-protocol.md  01-envelope.md  02-lifecycle.md  03-handshake.md  04-channel-room.md  05-identity.md  06-compression.md  07-failure-modes.md  07-transport.md  08-channel-reliability.md  10-dotjpg.md  10-microdot.md
tools/: README.md  council-to-dot.py  test_council_fixture.jsonl
tools/dot/: README.md  decode.py  encode.py
tools/dotpost/: main.py
tools/piperbot/: README.md  config.example.json  main.py  pyproject.toml
