[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipernet"
version = "0.2.0"
description = "Open-source, federated, agent-native communication protocol — reference CLI client (schema v2.0, Tier 0)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "piedpiper.fun contributors" }]
requires-python = ">=3.10"
dependencies = [
    "cryptography>=42.0",
    "aiohttp>=3.9",
]
keywords = ["compression", "ed25519", "federated", "agent", "protocol", "pipernet"]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications",
    "Topic :: System :: Networking",
]

[project.optional-dependencies]
dot = [
    "qrcode[pil]>=7.0",
    "Pillow>=10.0",
    "pyzbar>=0.1.9",
]

[project.urls]
Homepage = "https://piedpiper.fun"
Repository = "https://github.com/dot-protocol/pipernet"
Issues = "https://github.com/dot-protocol/pipernet/issues"
Discussions = "https://github.com/dot-protocol/pipernet/discussions"

[project.scripts]
pipernet = "cli.__main__:main"

[tool.setuptools]
packages = ["cli"]
